apps/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prometheus.bugaychuk.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
